--- a/e_commerce_vue/package.json
+++ b/e_commerce_vue/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bulma": "^0.9.4",
+    "bulma-toast": "^2.4.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
@@ -16,9 +17,9 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "^4.1.2",
+    "@vue/cli-plugin-router": "^5.0.8",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "^5.0.4",
+    "@vue/cli-service": "^5.0.8",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
   }
